[FIX] Fixing details

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "how_it_works_sections";
 @import "avatar";
 @import "search_bar";
+@import "search_bar_2";
 @import "card_drug";
 @import "card_show";
 @import "logos";
@@ -18,5 +19,8 @@
 @import "footer2";
 @import "navbar";
 @import "cart";
+@import "card_1";
+@import "card_2";
+
 
 
