--- a/app/views/components/_cart.html.erb
+++ b/app/views/components/_cart.html.erb
@@ -81,22 +81,27 @@
       <ul>
         <li class="checkout-price">
           <span class="label">Text</span>
-          <span class="price_value">$7,000</span>
+          <span class="price_value"><strong>$7,000</strong></span>
         </li>
         <li class="checkout-price">
           <span class="label">Text</span>
-          <span class="price_value">$7,000</span>
+          <span class="price_value"><strong>$7,000</strong></span>
         </li>
         <li class="checkout-price">
           <span class="label">Text</span>
-          <span class="price_value">$7,000</span>
+          <span class="price_value"><strong>$7,000</strong></span>
         </li>
       </ul>
     </div>
     <div class="line"></div>
     <div class="checkout-total">
+      <div class="group_1" >
       <p class="label">Total:</p>
       <h3>$7,000</h3>
+      </div>
+      <div>
+      <img class="arrow_img" src="<%= asset_path 'right-arrow.svg' %>" >
+      </div>
     </div>
   </div>
 </div>
