--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,6 +35,7 @@
      </div>
   </div>
 </div>-->
+<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
 <!-- NEW -->
 <div class="signup_page" >
@@ -44,37 +45,37 @@
     <div class="form">
       <div class="group_1" >
         <div class="field" >
-          <span class="placeholder" >Field 1 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Nombre <span style="color: red" >*</span></span>
           <input type="text" class="username">
         </div>
         <div class="field" >
-          <span class="placeholder" >Field 2 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Apellido 1<span style="color: red" >*</span></span>
           <input type="text" class="username">
         </div>
         <div class="field" >
-          <span class="placeholder" >Field 3 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Apellido 2<span style="color: red" >*</span></span>
           <input type="text" class="username">
         </div>
       </div>
       <div class="group_2" >
         <div class="field" >
-          <span class="placeholder" >Field 4 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Correo Electronico <span style="color: red" >*</span></span>
           <input type="text" class="username">
         </div>
       </div>
       <div class="group_3" >
         <div class="field" >
-          <span class="placeholder" >Field 4 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Telefono<span style="color: red" >*</span></span>
           <input type="text" class="username">
         </div>
       </div>
       <div class="group_4" >
         <div class="field" >
-          <span class="placeholder" >Field 6 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Contrasena<span style="color: red" >*</span></span>
           <input type="password" class="password">
         </div>
         <div class="field" >
-          <span class="placeholder" >Field 7 <span style="color: red" >*</span></span>
+          <span class="placeholder" >Confirmar Contrasena<span style="color: red" >*</span></span>
           <input type="password" class="password">
         </div>
       </div>
