--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,6 +60,11 @@
 
      <%= render "components/cart"  %>
 
+     <%= render "components/search_bar_2"  %>
+
+     <%= render "components/card_1"  %>
+
+
 
 
      <!-- benefisios -->
