--- a/app/assets/stylesheets/components/_cart.scss
+++ b/app/assets/stylesheets/components/_cart.scss
@@ -12,7 +12,6 @@
     @media (max-width: 750px) {
     padding: 20px;
   }
-
   .header{
     display: flex;
     justify-content: space-between;
@@ -105,7 +104,7 @@
       }
     }
     .checkout-total{
-      padding: 24px;
+      padding: 10px;
       display: flex;
       justify-content: space-between;
       align-items: baseline;
@@ -115,16 +114,29 @@
         font-weight: 700;
         font-size: 24px;
       }
-      @media (max-width: 750px) {
-        flex-direction: column;
-        line-height: 0;
+
+      .group_1{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        @media (max-width: 750px) {
+          flex-direction: column;
+          line-height: 0;
+          margin-top: -10px;
+
+        }
+      }
+    }
+    .arrow_img{
+      width: 20px;
+      padding-top: 20px;
+      @media (min-width: 750px) {
+       display: none;
 
       }
     }
   }
 }
-
-
 
 .line{
   border-top: 1px solid #e5e9eb;
