--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -21,9 +21,9 @@
     font-size: 22px;
   }
   .sub_title{
+    margin-bottom: 10px;
     color: grey;
     font-size: 15px;
-    margin-bottom: 10px;
   }
   .form{
     display: flex;
@@ -38,9 +38,12 @@
         margin-left: 10px;
         background-color: white;
         padding: 0;
-        width: 95px;
-        z-index: 5;
+        width: fit-content;
         font-weight: 500;
+        font-size: 1rem;
+        color: grey;
+        z-index: 5;
+
       }
     }
     input{
@@ -49,7 +52,9 @@
       border-radius: 4px;
       padding: 10px;
       &:focus{
-        border: 2px $light-blue solid;
+        border: 1px white solid;
+        transition: ease 0.1s;
+        box-shadow: 0px 0px 0px 2px $light-blue;
       }
     }
     .error_msg{
