--- a/app/assets/stylesheets/components/_sign_up.scss
+++ b/app/assets/stylesheets/components/_sign_up.scss
@@ -46,21 +46,27 @@
         padding-right: 10px;
         .placeholder{
           padding: 0;
-          width: 95px;
           margin-bottom: -11px;
           margin-left: 10px;
-          background-color: white;
+          background-color: #ffffff;
           z-index: 5;
           font-weight: 500;
+          width: fit-content;
+          font-size: 1rem;
+          color: grey;
+
         }
       }
       input{
         outline: none;
-        border: 1px grey solid;
+        border: 1px #9f9f9f solid;
         border-radius: 4px;
         padding: 10px;
         &:focus{
-          border: 2px $light-blue solid;
+          border: 1px white solid;
+          transition: ease 0.1s;
+          box-shadow: 0px 0px 0px 2px $light-blue;
+
         }
       }
       .error_msg{
