--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@
 // $body-color: $gray;
 // $primary:    $blue;
 // $success:    $green;
-// $info:       $yellow;
+$info:       $light-blue;
 // $danger:     $red;
 // $warning:    $orange;
 
