[FIX] improving cart

--- a/app/assets/stylesheets/components/_footer2.scss
+++ b/app/assets/stylesheets/components/_footer2.scss
@@ -6,6 +6,7 @@
   background: white;
   color: black;
   font-family: 'Montserrat';
+  bottom: 0;
   .logos{
     display: flex;
     justify-content: space-between;
