--- a/app/assets/stylesheets/components/_cart.scss
+++ b/app/assets/stylesheets/components/_cart.scss
@@ -1,8 +1,8 @@
-.steps{
-  .steps{
-    padding: 10px;
-  }
+.inactive{
+  display: none ;
 }
+
+/* ----------------------------------------------- CART SECTION ----------------------------------------------- */
 .cart_page{
   border-radius: 5px;
   display: flex;
@@ -35,121 +35,122 @@
     flex: 3;
     min-height: 300px;
     border-radius: 5px;
+    animation: slide-right 0.1s forwards;
   }
-  .price_section{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.14);
+
+  /* SIDE CARD*/
+  .price_section {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.14);
     margin-left: 30px;
     flex: 1;
-    height: 375px;
+    height: 360px;
     min-width: 300px;
     border-radius: 5px;
-    @media (max-width: 750px) {
-      z-index: 10;
-      bottom:0;
-      position: fixed;
-      background-color: white;
-      width: 94%;
-      margin: 0;
-      margin-bottom: 10px;
-      height: 80px;
-    }
-    .order_title{
+    animation: slide-left 0.1s forwards;
+    .order_title {
       text-align: start;
-      @media (max-width: 750px) {
-        display: none;
-      }
     }
-    .line{
-      @media (max-width: 750px) {
-       border: none;
-
-      }
-    }
-    .estimed-delivery{
+    .estimed-delivery {
       padding: 24px;
       line-height: 0;
-      @media (max-width: 750px) {
-       display: none;
-      }
+
       .shiping_date {
         font-size: 18px;
         color: #178255;
         font-weight: 700;
-        @media (max-width: 750px) {
-          display: none;
-        }
       }
     }
-    .checkout-prices{
+    .checkout-prices {
       padding: 24px;
-      @media (max-width: 750px) {
-        display: none;
-      }
-
-      .checkout-price{
+      .checkout-price {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .price_value{
+        .price_value {
           text-align: end;
         }
       }
-      ul{
+      ul {
         list-style-type: none;
         padding: 0;
         margin: 0;
       }
-      span{
+      span {
         align-items: flex-end;
       }
     }
-    .checkout-total{
+    .checkout-total {
       padding: 10px;
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      h3{
+
+      h3 {
         color: $light-blue;
         line-height: 1;
         font-weight: 700;
         font-size: 24px;
       }
-
-      .group_1{
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        @media (max-width: 750px) {
-          flex-direction: column;
-          line-height: 0;
-          margin-top: -10px;
-
-        }
-      }
-    }
-    .arrow_img{
-      width: 20px;
-      padding-top: 20px;
-      @media (min-width: 750px) {
-       display: none;
-
-      }
     }
   }
 }
+.switch_to_checkout, .switch_to_items_list{
+  width: 30px;
+  padding-top: 20px;
+  cursor: pointer;
+  @media (min-width: 750px) {
+    display: none;
+  }
+}
 
+.minimized_checkout_group_1 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+  padding-left: 10px;
+  width: 100%;
+  line-height: 0;
+  .label{
+    margin-top: 10px ;
+  }
+  h3{
+    color: $light-blue;
+    font-size: 25px;
+  }
+  @media (max-width: 750px) {
+    flex-direction: column;
+    line-height: 0;
+  }
+}
+
+.minimized_checkout{
+  display: none;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.14);
+  padding: 10px;
+  width: 94%;
+  height: 80px;
+  bottom: 0;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  z-index: 10;
+  position: fixed;
+  background-color: white;
+  @media (max-width: 750px) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 .line{
   border-top: 1px solid #e5e9eb;
   width: 100%;
 }
 
-/* PRODUCT */
+/* --------------------------- PRODUCT ITEM --------------------------- */
 
 .cart_article{
   padding: 20px;
   padding-top: 30px ;
   padding-bottom: 30px ;
-
   .cart_article_texts{
     display: flex;
     color:   #1b3f4e;
@@ -177,7 +178,6 @@
         font-weight: 400;
         padding-right: 10px;
         padding-left: 10px;
-
       }
       .minus{
         font-size: 35px;
@@ -203,11 +203,25 @@
     .cart_article_price{
       color: grey;
       font-size: 14px;
-
     }
     .cart_article_price_2{
       color: $light_blue;
       font-size: 23px;
     }
+  }
+}
+
+
+/* --------------------- ANIMATIONS -------------------- */
+@keyframes slide-left {
+  0% {
+    opacity: 0;
+    transform: translatex(-200px);
+  }
+}
+@keyframes slide-right {
+  0% {
+    opacity: 0;
+    transform: translatex(200px);
   }
 }
