--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -8,10 +8,10 @@
             <%= f.simple_fields_for :invoice_details do |i| %>
                 <%= i.label invoice_detail.drug.drug_name %>
                 <%= i.input :quantity, input_html: { value: invoice_detail.quantity } %>
-                <%= i.input :subtotal, input_html: { value: invoice_detail.subtotal, disabled: true} %>
+                <%= i.input :subtotal, input_html: { value: invoice_detail.subtotal } %>
                 <%= i.input :drug_id, as: :hidden, input_html: { value: invoice_detail.drug.id } %>
+                <%= i.input :total, as: :hidden, input_html: { value: invoice_detail.total } %>
                 <a href= <%="/session/invoice_detail/drugs/#{invoice_detail.drug_id}"%> rel="nofollow" data-method="delete">Eliminar</a>
-
             <% end %>
         <% end %>
 
