--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,4 +4,6 @@
   <p> <%= invoice_detail.drug.drug_name %> <br>
   <%= invoice_detail.quantity %><br>
   <%= invoice_detail.subtotal %> </p>
+
 <% end %>
+<p> total:<%= @total %>  </p>
