--- a/app/views/components/_footer2.html.erb
+++ b/app/views/components/_footer2.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="logos" >
-    <div class="footer_logo" >LOGO</div>
+    <div class="footer_logo" ><%= image_tag "suscrimed-logo-full.png", width: 100 %></div>
     <div class="social_networks" >
       <img alt="insta"  class="insta_logo" src="<%= asset_path 'insta-logo.svg' %>" >
       <img alt="facebook"  class="face_logo" src="<%= asset_path 'facebook.svg' %>" >
@@ -8,29 +8,29 @@
   </div>
   <div class="footer_groups" >
     <div class="footer_adresses" >
-      <p>Av. de la Industria 300,</p>
-      <p>Punto Central Local PB-C-11,</p>
-      <p>San Pedro Garza García, N.L. 66279</p>
+      <p>Av. Paseo de la Reforma 296</p>
+      <p>Piso 33, Local 205</p>
+      <p>San Miguel de Chapultepec, CDMX</p>
     </div>
     <div class="group_2" >
-      <a> link here </a>
-      <a> link here </a>
+      <a> Farmacia </a>
+      <a> Suscripcion </a>
     </div>
     <div class="group_3" >
-      <a> link here </a>
-      <a> link here </a>
+      <a> Reseñas </a>
+      <a> Blog </a>
     </div>
     <div class="phone_number" >
-      <p class="label" > label </p>
-      <p> <strong> 01020304505</strong> </p>
+      <p class="label" > Llamanós </p>
+      <p> <strong> 333-100-3703</strong> </p>
     </div>
   </div>
   <div class="line" ></div>
   <div class="copyrights" >
-    <p>copyright here</p>
+    <p>© 2021 Suscrimed. Todos los derechos reservados.</p>
     <div class="links" >
-      <a>link here</a>
-      <a>link here</a>
+ <!--      <a>Términos y Condiciones</a> -->
+      <a>Aviso de Privacidad</a>
     </div>
   </div>
 </div>
