--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -23,6 +23,7 @@
 
 
 
+
 <!-- en new vamos a tener una forma con simple for accion create
 
 parsear las drugas que estan en session[:cart] -->
@@ -63,7 +64,7 @@ parsear las drugas que estan en session[:cart] -->
                       </div>
                       <div class="prices">
                         <h3 class="cart_article_price"> 1 x $1,800.00 </h3>
-                        <h2 class="cart_article_price_2">  $1,800.00 </h2>
+                        <h2 class="cart_article_price_2">  $ $1,800.00 </h2>
                       </div>
                     </div>
                   </div>
