--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,3 +1,3 @@
-<% @invoice.each do |invoice| %>
-  <p> <%= invoice.invoice_id %> </p>
+<% @invoices.each do |invoice| %>
+  <p> <%= invoice.id %> </p>
 <% end %>
