--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,88 +1,50 @@
-<!--<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
 
 
-      <h2>Sign up</h2>
+<div class="login_page" >
+<div class="login" >
+  <img alt="logo"  class="brand_logo" src="<%= asset_path 'suscrimed-logo-full.png' %>" >
+  <div class="title" >Bienvenido !</div>
+  <div class="sub_title">Crea a tu cuenta Suscrimed</div>
+  <div class="container" >
+    <div class="row justify-content-center" >
+      <div class="col-6">
 
-      <%#= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%#= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="form-input">
-          <%#= f.label :email %><br />
-          <%#= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-
-        <div class="form-input">
-          <%#= f.label :password %>
-          <%# if @minimum_password_length %>
-          <em>(<%#= @minimum_password_length %> characters minimum)</em>
-          <%# end %><br />
-          <%#= f.password_field :password, autocomplete: "new-password" %>
-        </div>
-
-        <div class="form-input">
-          <%#= f.label :password_confirmation %><br />
-          <%#= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
-
-        <div class="form-action">
-          <%#= f.submit "Sign up" %>
-        </div>
-      <%# end %>
-
-      <%#= render "devise/shared/links" %>
-     </div>
-  </div>
-</div>-->
-
-
-<!-- NEW -->
-<div class="signup_page" >
-  <div class="signup" >
-    <img alt="logo"  class="brand_logo" src="<%= asset_path 'suscrimed-logo-full.png' %>" >
-    <div class="title" >Welcome !</div>
-    <div class="form">
-      <div class="group_1" >
-        <div class="field" >
-          <span class="placeholder" >Nombre <span style="color: red" >*</span></span>
-          <input type="text" class="username">
-        </div>
-        <div class="field" >
-          <span class="placeholder" >Apellido 1<span style="color: red" >*</span></span>
-          <input type="text" class="username">
-        </div>
-        <div class="field" >
-          <span class="placeholder" >Apellido 2<span style="color: red" >*</span></span>
-          <input type="text" class="username">
-        </div>
-      </div>
-      <div class="group_2" >
-        <div class="field" >
-          <span class="placeholder" >Correo Electronico <span style="color: red" >*</span></span>
-          <input type="text" class="username">
-        </div>
-      </div>
-      <div class="group_3" >
-        <div class="field" >
-          <span class="placeholder" >Telefono<span style="color: red" >*</span></span>
-          <input type="text" class="username">
-        </div>
-      </div>
-      <div class="group_4" >
-        <div class="field" >
-          <span class="placeholder" >Contrasena<span style="color: red" >*</span></span>
-          <input type="password" class="password">
-        </div>
-        <div class="field" >
-          <span class="placeholder" >Confirmar Contrasena<span style="color: red" >*</span></span>
-          <input type="password" class="password">
-        </div>
-      </div>
-      <button class="signup_btn" >Sign up</button>
-      <span class="sign_in" > Already have an account ? <span style="text-decoration: underline;" >Sign in</span> </span>
+  <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+    <div class="form-inputs">
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <%= f.input :password,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password" } %>
     </div>
+
+    <div class="form-actions ">
+      <%= f.button :submit, "Registrar", class: "btn btn-large btn-info sign_in " %>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+
+      <div class="actions ">
+        <%# f.submit ## "Iniciar Sesión" , :class => 'button button_fill_primary bigger' %>
+
+      </div>
+
+
+    </div>
+
   </div>
-</div>
 
 
+  </div>
+
+  </div>
+
+  </div>
