--- a/app/assets/stylesheets/components/_how_it_works_sections.scss
+++ b/app/assets/stylesheets/components/_how_it_works_sections.scss
@@ -53,12 +53,14 @@ $large: 1010px;
     margin: 30px;
     border-radius: 4px;
     color: $white;
+
     background-color: $light-blue ;
     border: none;
     cursor: pointer;
     font-family: 'Varela Round', sans-serif;
     font-weight: 600;
     font-size: 15px;
+    padding-top: 9px;
 
     &:hover{
         box-shadow: 0px 0px 12px 0px $light-blue;
