--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
 
         </div>
         <div class="text-center">
-          <button class="btn btn-primary" href="/drugs" >Haz tu primer pedido</button>
+          <a class="btn btn-primary" style="text-align:center" href="/drugs" >Haz tu primer pedido</a>
         </div>
 
     </div>
@@ -63,7 +63,7 @@
     <div  >
         <div class="card_content" >
             <h1 class="card_title" >Nuestro servicio es gratuito. Solo pagas por tus medicamentos</h1>
-            <button class=" button button_fill_default" href="/drugs">Haz tu primer pedido</button>
+            <a class=" button button_fill_default" href="/drugs">Haz tu primer pedido</a>
             <span class="card_text" ><strong>¿Prefieres hablar por teléfono?</strong><p class="sub_text" >Habla con nuestro equipo de atención hoy</p></span>
             <button class=" button button_outline_default" > 800-HOLA-SUS</button>
         </div>
