--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,13 +1,111 @@
- <h1> <%= @invoice.frequency %>  </h1>
 
-<% @invoice.invoice_details.each do |invoice_detail|  %>
-  <p> <%= invoice_detail.drug.drug_name %> <br>
-  <%= invoice_detail.quantity %><br>
-  <%= invoice_detail.subtotal %> </p>
 
-<% end %>
-<p> total:<%= @invoice.invoice_details.sum(:subtotal) %>  </p>
-<p> state:<%= @invoice.state %>  </p>
+<div class="container mt-5 mb-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="text-left logo p-2 px-5"> <img src="<%= asset_path 'suscrimed-logo-full' %>" width="100"> </div>
+                <div class="invoice p-5">
+                    <h5>Tu orden esta confirmada!</h5> <span class="font-weight-bold d-block mt-4"></span> <span>Tu orden llegara a tu domicilio dentro de las siguientes 48 horas!</span>
+                    <div class="payment border-top mt-3 mb-3 border-bottom table-responsive">
+                        <table class="table table-borderless">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="py-2"> <span class="d-block text-muted">Fecha de Orden</span> <span>12 Jan,2018</span> </div>
+                                    </td>
+                                    <td>
+                                        <div class="py-2"> <span class="d-block text-muted">Numero de orden</span> <span>MT12332345</span> </div>
+                                    </td>
+                                    <td>
+                                        <div class="py-2"> <span class="d-block text-muted">Pago</span> <span><img src="https://img.icons8.com/color/48/000000/mastercard.png" width="20" /></span> </div>
+                                    </td>
+                                    <td>
+                                        <div class="py-2"> <span class="d-block text-muted">Dirección de envio</span> <span><%=  @address[:address][:line1]+ "," + @address[:address][:city] %></span> </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="product border-bottom table-responsive">
+                        <table class="table table-borderless">
+                          <tbody>
+                            <% @invoice.invoice_details.each do |invoice_detail|  %>
+                              <tr>
+                                  <td width="20%"> <img src="<%= invoice_detail.drug.image%>" width="90"> </td>
+                                  <td width="60%"> <span class="font-weight-bold"><%= invoice_detail.drug.drug_name %></span>
+                                      <div class="product-qty"> <span class="d-block"><%= invoice_detail.quantity %></span> </div>
+                                  </td>
+                                  <td width="20%">
+                                      <div class="text-right"> <span class="font-weight-bold"><%= invoice_detail.subtotal %></span> </div>
+                                  </td>
+                              </tr>
+                            <% end %>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="row d-flex justify-content-end">
+                        <div class="col-md-5">
+                            <table class="table table-borderless">
+                                <tbody class="totals">
+                                   <!--  <tr>
+                                        <td>
+                                            <div class="text-left"> <span class="text-muted">Subtotal</span> </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-right"> <span>$168.50</span> </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="text-left"> <span class="text-muted">Shipping Fee</span> </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-right"> <span>$22</span> </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="text-left"> <span class="text-muted">Tax Fee</span> </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-right"> <span>$7.65</span> </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="text-left"> <span class="text-muted">Discount</span> </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-right"> <span class="text-success">$168.50</span> </div>
+                                        </td>
+                                    </tr> -->
+                                    <tr class="border-top border-bottom">
+                                        <td>
+                                            <div class="text-left"> <span class="font-weight-bold">Subtotal</span> </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-right"> <span class="font-weight-bold"><%= @invoice.invoice_details.sum(:subtotal) %> </span> </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <p>¡Enviaremos un correo electrónico de confirmación de envío cuando el artículo se envíe correctamente!</p>
+                    <p class="font-weight-bold mb-0">Gracias por comprar con nosotros!</p> <span>Equipo suscrimed</span>
+                </div>
+                <div class="d-flex justify-content-between footer p-3"> <span>¿Necesitas servicio de ayuda? <a href="#">333-100-3703</a></span> <span>12 June, 2020</span> </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 
 
 
