--- a/app/views/invoices/checkout.html.erb
+++ b/app/views/invoices/checkout.html.erb
@@ -1,20 +1,23 @@
 
-<div class="container">
-  <div class="row py-4">
-    <div class="col">
-      <h1>Checkout summary</h1>
-      <p>Purchase of <strong>Tu orden va ser de </strong> for <strong><%= humanized_money_with_symbol @invoice.invoice_details.sum(:subtotal) %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
-      <script src="https://js.stripe.com/v3/"></script>
-      <script>
-        const paymentButton = document.getElementById('pay');
-        paymentButton.addEventListener('click', () => {
-          const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
-          stripe.redirectToCheckout({
-            sessionId: '<%= @invoice.checkout_session_id %>'
+
+<div class="container d-flex justify-content-center">
+    <div class="card mt-5 p-4 text-black">
+        <p class="top mb-1">Gracias por tu orden </p>
+        <h1>Resumen de Orden</h1>
+        <p><strong>Tu orden va ser de </strong> for <strong><%= humanized_money_with_symbol @invoice.invoice_details.sum(:subtotal)/100 %></strong></p>
+        <button id="pay" class="btn btn-primary">Pagar</button>
+        <script src="https://js.stripe.com/v3/"></script>
+        <script>
+          const paymentButton = document.getElementById('pay');
+          paymentButton.addEventListener('click', () => {
+            const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+            stripe.redirectToCheckout({
+              sessionId: '<%= @invoice.checkout_session_id %>'
+            });
           });
-        });
-      </script>
+        </script>
     </div>
-  </div>
+</div>
+
+<div class="good">
 </div>
