--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -4,7 +4,7 @@ body {
     font-family: 'Roboto', sans-serif
 }
 
-.card {
+.card_checkout {
     width: 400px;
     border: none;
     border-radius: 10px;
