--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
       </div>
 
     <!-- code a "How it works" section -->
-   <div class="card">
+  <div class="card">
         <h2 class="card_header" >¿Cómo funciona Suscrimed?</h2>
         <div class="items" >
             <li class="item" ><img class="img" src="<%= asset_path 'whatsapp.svg' %>" >
@@ -47,11 +47,12 @@
                  <span class="item_header" >Envio gratis</span>
                  <p class="item_text" >Recibe tus medicamentos sin costo adicional. Solo pagas por tus medicinas</p>
             </li>
-
         </div>
         <div class="text-center">
           <a class="btn btn-primary" style="text-align:center" href="/drugs" >Haz tu primer pedido</a>
         </div>
+    </div>
+
 
     </div>
     <%= render "components/logos"  %>
