--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,7 @@
       <div class="col-6">
 
   <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
     <div class="form-inputs">
       <%= f.input :email,
                   required: true,
@@ -31,11 +32,11 @@
 
   <%= render "devise/shared/links" %>
 
-
-      <div class="actions ">
+<!--
+      <div class="actions "> -->
         <%# f.submit ## "Iniciar Sesión" , :class => 'button button_fill_primary bigger' %>
 
-      </div>
+   <!--    </div> -->
 
 
     </div>
@@ -48,3 +49,34 @@
   </div>
 
   </div>
+
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <h2>Sign up</h2>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="form-input">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+        <div class="form-input">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+        <div class="form-input">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+        <div class="form-action">
+          <%= f.submit "Sign up" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+     </div>
+  </div>
+</div>
