--- a/app/assets/stylesheets/components/_cart.scss
+++ b/app/assets/stylesheets/components/_cart.scss
@@ -1,7 +1,10 @@
 .inactive{
   display: none ;
 }
-
+#checkout_side_card {
+  position: sticky;
+  top: 25%;
+}
 /* ----------------------------------------------- CART SECTION ----------------------------------------------- */
 .cart_page{
   border-radius: 5px;
@@ -194,6 +197,7 @@
     }
   }
   .prices{
+    width: 25%;
     font-weight: 700;
     line-height: 24px;
     text-align: end;
@@ -206,7 +210,7 @@
     }
     .cart_article_price_2{
       color: $light_blue;
-      font-size: 23px;
+      font-size: 18px;
     }
   }
 }
