--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -22,12 +22,16 @@
        </ul>
        <ul class="nav_links_right" style="list-style: none;">
           <% if user_signed_in? %>
+          <li class="nav_link_el" >
+               <a class="nav_id" href="/invoices/new"> Carrito</a>
+           </li>
+           <% @total_items = 0 %>
+            <% session[:cart].each{|k,v| @total_items += v } if session[:cart] %>
+            <%= @total_items %>
           <li class="dropdown nav-item" id="navbarDropdown">
             <% avatar_url = current_user.facebook_picture_url || "avatar.svg" %>
             <%= image_tag avatar_url, class: "avatar"%>
-           <!--  <% @total_items = 0 %>
-            <% session[:cart].each{|k,v| @total_items += v } if session[:cart] %>
-            <%= @total_items %> -->
+
 
 
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
